gitops/apps/attic/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: attic
  name: attic
spec:
  selector:
    app: attic
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
