gitops/apps/attic/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attic
spec:
  parentRefs:
    - name: public
      namespace: istio-system
      sectionName: https
  hostnames:
    - attic.didactiklabs.io
  rules:
    - backendRefs:
        - name: attic
          port: 8080
